--- a/style/bingoStyle.css
+++ b/style/bingoStyle.css
@@ -34,6 +34,12 @@ body {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
+.buttonContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 h1 {
     font-family: 'Pacifico', cursive;
     font-size: 48px;
@@ -46,6 +52,7 @@ table {
     width: 800px;
     height: 800px;
     margin: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
 }
   
 table td {
@@ -78,6 +85,7 @@ button {
     font-size: 24px;
     border: none;
     padding: 10px 20px;
+    margin: 10px;
     border-radius: 10px;
     cursor: pointer;
 }
