--- a/style/style.css
+++ b/style/style.css
@@ -69,6 +69,24 @@ input[type=number]::placeholder {
     color: white;
 }
 
+input[type=text] {
+    width: 125px;
+    height: 40px;
+    border-radius: 20px;
+    border: 4px solid var(--textfieldborder-color);
+    padding: 10px;
+    margin: 10px;
+    font-family: Helvetica Neue, sans-serif;
+    font-size: 16px;
+    background-color: var(--textfield-color);
+    color: var(--text-color);
+    caret-color: var(--accent-color);
+}
+
+input[type=text]::placeholder {
+    color: white;
+}
+
 button {
     background-color: #007FFF;
     color: #FFFFFF;
