--- a/style/stream.css
+++ b/style/stream.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url("../resources/RosinBingoBackground.png");
+    background-image: url("../resources/RosinBingoBackgroundv2.png");
     /* background-size: cover; */
     background-repeat: no-repeat;
     font-family: 'Signika', sans-serif;
@@ -20,7 +20,8 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: flex-end;
-    width: 100%;
+    margin-left: 420px;
+    width: 1500px;
     justify-content: center;
 }
   
@@ -45,20 +46,17 @@ text {
 
     margin: auto;
     border-radius: 10px;
-    height: 130px;
-    width: 205px;
+    height: 160px;
+    width: 160px;
     font-size: 15px;
 }
 
 .marked {
-    /* background: ; */
-    animation: play-once 1s forwards;
-    animation-duration: 5000ms;
+    animation: play-once 1580ms forwards;
 }
 
 .marked text {
-    animation: play-once-text 1s forwards;
-    animation-duration: 1500ms;
+    animation: play-once-text 1580ms forwards;
 }
 
 @keyframes play-once-text {
@@ -78,11 +76,18 @@ text {
         background-image: url("../resources/zwinker.gif");
         background-size: cover;
         background-repeat: no-repeat;
-      }
-      100% {
+    }
+    99% {
+        background-image: url("../resources/zwinker.gif");
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    100% {
         background: radial-gradient(ellipse at top left, var(--mint) 87%, transparent 88%), var(--dark-green);
         background-size: cover;
         background-repeat: no-repeat;
-      }
+    }
 }
+
+
   
