--- a/style/kutcher.css
+++ b/style/kutcher.css
@@ -45,8 +45,8 @@ text {
 
     margin: auto;
     border-radius: 10px;
-    height: 180px;
-    width: 190px;
+    height: 130px;
+    width: 205px;
     font-size: 15px;
 }
 
@@ -72,12 +72,12 @@ text {
   
 @keyframes play-once {
     0% {
-        background-image: url("../resources/zwinker.gif");
+        background-image: url("../resources/zwinkerv2.gif");
         background-size: cover;
         background-repeat: no-repeat;
     }
     99% {
-        background-image: url("../resources/zwinker.gif");
+        background-image: url("../resources/zwinkerv2.gif");
         background-size: cover;
         background-repeat: no-repeat;
     }
