--- a/style/bingoV2.css
+++ b/style/bingoV2.css
@@ -20,13 +20,19 @@ body {
     margin: 0;
 }
 
+#inhalt {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 .matrix {
     display: flex;
     margin: auto;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
     flex-direction: column;
 }
 
@@ -35,8 +41,19 @@ body {
     padding: 5px;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: flex-end;
     justify-content: center;
+}
+
+#bingoControl {
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#bingoBets {
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 textarea {
@@ -124,6 +141,26 @@ button {
 
 button:hover {
     background-color: #0055AA;
+}
+
+.controlButton {
+    padding: 20px;
+}
+
+input[type=number] {
+    width: 50px;
+    height: 40px;
+    border-radius: 20px;
+    border: 4px solid var(--dark-red);
+    padding: 10px;
+    margin: 10px;
+    font-size: 32px;
+    background-color: var(--orange);
+    color: #FFFFFF;
+}
+
+input[type=number]::placeholder {
+    color: #FFFFFF;
 }
 
 .clickable {
