--- a/style/bingoV2.css
+++ b/style/bingoV2.css
@@ -217,4 +217,20 @@ input[type=number]::placeholder {
     border-color: #114060;
     border-width: 3px;
 }
+
+#startButton {
+    background-color: #007FFF;
+    color: #FFFFFF;
+    font-size: 24px;
+    padding: 10px 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border-color: #114060;
+    border-width: 3px;
+}
   
