--- a/style/kutcher.css
+++ b/style/kutcher.css
@@ -12,15 +12,26 @@ body {
     font-family: 'Signika', sans-serif;
 }
 
-.row {
+#display {
     position: fixed;
+    display: flex;
+    bottom: 0;
+    left: 0;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    width: 100%;
+    justify-content: center;
+}
+
+.row {
     bottom: 0;
     left: 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: flex-end;
-    width: 100%;
+    width: 1550px;
     justify-content: center;
 }
   
@@ -45,8 +56,8 @@ text {
 
     margin: auto;
     border-radius: 10px;
-    height: 130px;
-    width: 205px;
+    height: 110px;
+    width: 165px;
     font-size: 15px;
 }
 
@@ -102,4 +113,35 @@ text {
     width: 500px;
     height: 400px;
     display: none;
+}
+
+#counter {
+    width: 160px;
+    height: 80px;
+
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 10px;
+
+    font-size: 25px;
+
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    background: radial-gradient(ellipse at top left, var(--dark-red) 87%, transparent 88%), var(--orange);
+    background-size: 100% 100%, auto;
+    background-repeat: no-repeat;
+    border-radius: 0 0 10px 0;
+    border-radius: 5px;
+}
+
+#megaCounter {
+    font-size: 42px;
+}
+
+#placeholder {
+    width: 185px;
+
 }
