--- a/QuizPoker/style/PokerTable.css
+++ b/QuizPoker/style/PokerTable.css
@@ -68,14 +68,17 @@ body {
 }
 
 .playerBox {
-    background-color: lightblue;
-    width: 304px;
-    height: 233px; /* -62 für 16:9*/
-    margin: 20px;
+    background: radial-gradient(circle, #2E7D32 0%, #0f3811 100%);
     border: 4px solid var(--dark-red);
     border-radius: 12px;
     display: flex;
     flex-direction: column-reverse;
+}
+
+.placeholder {
+    width: 304px;
+    height: 233px; /* -62 für 16:9*/
+    margin: 20px;
 }
 
 .playerInfo {
@@ -137,18 +140,11 @@ body {
 .button {
     padding: 10px 20px;
     margin-right: 10px;
-    background-color: #0074d9;
-    color: #fff;
+    color: azure;
     
     cursor: pointer;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
-    border-color: #000000;
-    border-width: 3px;
-}
-
-.button:hover {
-    background-color: #0056a2;
+    border: 3px solid #000000;
 }
 
 .otherInfo {
@@ -160,4 +156,50 @@ body {
     /* background: radial-gradient(ellipse at top left, var(--dark-red) 77%, transparent 78%), var(--orange); */
     background: radial-gradient(circle, var(--dark-red) 0%, #3d0d06 100%);
     border-radius: 10px;
+}
+
+#throw {
+    background-color: var(--accent-color);
+    transition: background-color 0.3s ease;
+}
+
+#call {
+    background-color: var(--dark-green);
+    transition: background-color 0.3s ease;
+}
+
+#raise {
+    background-color: var(--orange);
+    transition: background-color 0.3s ease;
+}
+
+#throw:hover {
+    background-color: #0056a2;
+}
+#call:hover {
+    background-color: #2b6533;
+}
+#raise:hover {
+    background-color: #96280f;
+}
+
+#raise:active {
+    background-color: #5a180a; 
+    transition: background-color 0s; /* Um die Transition beim Klicken zu deaktivieren */
+}
+#call:active {
+    background-color: #17371c; 
+    transition: background-color 0s; /* Um die Transition beim Klicken zu deaktivieren */
+}
+#throw:active {
+    background-color: #00305a; 
+    transition: background-color 0s; /* Um die Transition beim Klicken zu deaktivieren */
+}
+
+input {
+    font-size: x-large;
+    font-weight: bold;
+    width: 100px;
+    border: 3px solid #000000;
+    border-radius: 12px;
 }
