--- a/QuizPoker/style/PokerTable.css
+++ b/QuizPoker/style/PokerTable.css
@@ -108,6 +108,12 @@ body {
     border-radius: 500px;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.8); /* Hinzufügen von Schatten für den Holzeffekt */
     background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: space-evenly;
 }
 
 .bottomRow {
@@ -202,4 +208,51 @@ input {
     width: 100px;
     border: 3px solid #000000;
     border-radius: 12px;
+}
+
+text {
+    color: #ffffff; 
+}
+
+h2 {
+    font-size: 50px;
+    color: var(--mint);
+    margin: 10px;
+}
+
+h3 {
+    font-size: 32px;
+    color: var(--mint);
+    margin: 5px;
+}
+
+.tip {
+    margin: 5px;
+    padding: 10px;
+    font-size: 24px;
+    color: #34863f;
+    background: radial-gradient(ellipse at top left, var(--mint) 87%, transparent 88%), var(--dark-green);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+}
+
+.challenge {
+    max-width: 80%;
+    margin: 20px 0;
+    padding: 10px;
+    background: radial-gradient(ellipse at top left, var(--dark-red) 77%, transparent 78%), var(--orange);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+.question {
+    max-width: 60%;
+    margin: 20px 0;
+    padding: 10px;
+    background: radial-gradient(ellipse at top left, var(--dark-red) 77%, transparent 78%), var(--orange);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
