--- a/QuizPoker/style/PokerTable.css
+++ b/QuizPoker/style/PokerTable.css
@@ -202,7 +202,7 @@ body {
     transition: background-color 0s; /* Um die Transition beim Klicken zu deaktivieren */
 }
 
-input {
+#raiseAmount {
     font-size: x-large;
     font-weight: bold;
     width: 100px;
@@ -255,4 +255,20 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#cardsInput {
+    font-size: 80px;
+    font-weight: bold;
+    font-family: 'Signika', sans-serif;
+    width: 160px;
+    border: 3px solid #000000;
+    border-radius: 12px;
+}
+
+#cardsInputDiv {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    padding: 80px;
 }
