--- a/QuizPoker/style/PokerTable.css
+++ b/QuizPoker/style/PokerTable.css
@@ -272,3 +272,15 @@ h3 {
     right: 0;
     padding: 80px;
 }
+
+#cardsText {
+    font-size: 80px;
+    font-weight: bold;
+    font-family: 'Signika', sans-serif;
+    width: 160px;
+    border: 3px solid var(--dark-red);
+    border-radius: 12px;
+    color: #34863f;
+    background: radial-gradient(ellipse at top left, var(--mint) 87%, transparent 88%), var(--dark-green);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 1.2);
+}
