--- a/QuizPoker/style/PokerTable.css
+++ b/QuizPoker/style/PokerTable.css
@@ -110,7 +110,7 @@ body {
     background-size: cover;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     align-content: center;
     justify-content: space-evenly;
@@ -284,4 +284,39 @@ h3 {
     color: #34863f;
     background: radial-gradient(ellipse at top left, var(--mint) 87%, transparent 88%), var(--dark-green);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 1.2);
+}
+
+.potInfos {
+    width: 20%;
+    margin: 20px 0;
+    padding: 10px;
+    /* background: radial-gradient(ellipse at top left, var(--dark-red) 77%, transparent 78%), var(--orange); */
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#potInfo {
+    border: 5px solid #723305;
+    border-radius: 10px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.4);
+    background: radial-gradient(circle, #ffd700 0%, #B8860B 100%);
+    padding: 10px;
+    color: #191919;
+    font-size: 22px;
+    font-weight: bold;
+    font-family: 'Signika', sans-serif;
+}
+
+#challengeInfo {
+    border: 5px solid #723305;
+    border-radius: 10px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.4);
+    background: radial-gradient(circle, var(--textfield-color) 0%, var(--textfieldborder-color) 100%);
+    padding: 10px;
+    color: #000000;
+    font-size: 22px;
+    font-weight: bold;
+    font-family: 'Signika', sans-serif;
 }
