--- a/QuizPoker/style/PokerTable.css
+++ b/QuizPoker/style/PokerTable.css
@@ -274,6 +274,26 @@ h3 {
     padding-bottom: 80px;
 }
 
+#timerText {
+    font-size: 80px;
+    font-weight: bold;
+    font-family: 'Signika', sans-serif;
+    width: 220px;
+    border: 6px solid var(--dark-red);
+    border-radius: 12px;
+    color: #34863f;
+    background: radial-gradient(ellipse at top left, var(--mint) 87%, transparent 88%), var(--dark-green);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 1.2);
+}
+
+#timerDiv {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-left: 80px;
+    padding-top: 80px;
+}
+
 #cardsText {
     font-size: 80px;
     font-weight: bold;
