--- a/ai/style/Jeremy.css
+++ b/ai/style/Jeremy.css
@@ -6,7 +6,7 @@
 #frankDiv {
     width: 240px;
     height: 240px;
-    background-image: url("../../resources/Rosinstopp.png");
+    background-image: url("../../resources/Jeremystopp.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
