--- a/ai/style/Jeremy.css
+++ b/ai/style/Jeremy.css
@@ -1,12 +1,7 @@
-#frank {
-    width: 200px;
-    height: auto;
-}
-
 #frankDiv {
-    width: 240px;
-    height: 240px;
-    background-image: url("../../resources/Jeremystopp.png");
+    width: 500px;
+    height: 500px;
+    background-image: url("../../resources/jeremystopp.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
