--- a/ai/style/Rosin.css
+++ b/ai/style/Rosin.css
@@ -1,12 +1,7 @@
-#frank {
-    width: 200px;
-    height: auto;
-}
-
 #frankDiv {
     width: 240px;
     height: 240px;
-    background-image: url("../../resources/Rosinstopp.png");
+    background-image: url("../../resources/rosinstopp.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
