--- a/league/style/EloOverlay.css
+++ b/league/style/EloOverlay.css
@@ -36,6 +36,9 @@ body {
 .imgdiv {
     position: relative;
     display: inline;
+    width: 40px;
+    height: 40px;
+    filter: drop-shadow(3px 3px 3px #222);
 }
 
 #V9Player{
@@ -50,10 +53,9 @@ body {
 
 .profileImg {
     max-width: 100%;
-    margin: 5px;
-    height: 50px;
+    height: 35px;
     border-radius: 50%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 1.2);
+    clip-path: circle(50% at 50% 50%);
 }
 
 .ELO {
@@ -72,4 +74,12 @@ p {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.overlayIMG {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 35px;
+    height: 35px;
 }
