--- a/league/style/EloOverlay.css
+++ b/league/style/EloOverlay.css
@@ -30,7 +30,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .imgdiv {
@@ -41,7 +40,7 @@ body {
     filter: drop-shadow(3px 3px 3px #222);
 }
 
-#V9Player{
+#V9Player {
     display: flex;
     justify-content: space-around;
     margin-top: 5px;
@@ -81,6 +80,10 @@ p {
     justify-content: center;
     align-items: center;
     flex-direction: row;
+}
+
+.lpDiff {
+    font-size: 18px;
 }
 
 .overlayIMG {
